[GTK+] Animations not played properly when using synchronous decoding https://bugs.webkit.org/show_bug.cgi?id=170591

Reviewed by Carlos Garcia Campos.

Fix an index error when destroying decoded frames that was sometimes deleting the frame we wanted
to keep.

Covered by exitent tests.

* platform/graphics/ImageFrameCache.cpp:
(WebCore::ImageFrameCache::destroyDecodedData):


Canonical link: https://commits.webkit.org/187520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215091 268f45cc-cd09-0410-ab3c-d52691b4dbfc